Implemented new changes and deployed

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 REACT_APP_INFURA_PROJECT_ID=
 REACT_APP_INFURA_PROJECT_SECRET=
+FIREBASE_API=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MSG_SENDER_ID=
+FIREBASE_APP_ID=
