--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "base-64": "^1.0.0",
     "bootstrap": "^4.6.0",
     "dotenv": "^16.0.3",
-    "ipfs-api": "^26.1.2",
+    "firebase": "^9.6.8",
     "ipfs-http-client": "^50.0.0",
+    "magic-sdk": "^16.2.0",
+    "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "gh-pages": "^3.1.0"
   }
 }
